--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,50 @@
+
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-.img{
-    position: relative;
-    left: 350px;
-    
-    
 
-    width: 120%;
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.juegos {
+    width: 30%;
+    margin-bottom: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.imagenes {
+    
+    width: 30%;
+    height: auto;
+}
+.imagen1 {
+    width: 450px;
+    height: auto;
+}
+
+
+.info {
+    padding: 10px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    bottom: 0;
+    width: 100%;
 }
