--- a/css/historia.css
+++ b/css/historia.css
@@ -54,3 +54,10 @@ footer {
     bottom: 0;
     width: 100%;
 }
+p{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    height: 100vh; 
+    text-align: center;  
+}
